<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@android:color/white"
            android:orientation="vertical"
            tools:context=".activities.SignUpActivity">


        <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="131dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:onClick="selectImage"
                app:srcCompat="@mipmap/addphotos"
                tools:ignore="ContentDescription"/>

        <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="50dp"
                android:textStyle="bold"
                android:textSize="16sp"
                android:paddingBottom="15dp"
                android:layout_height="wrap_content"
                android:text="@string/full_name"/>

        <EditText
                android:id="@+id/editTextFullName"
                android:layout_width="match_parent"
                android:ems="10"
                android:layout_height="40dp"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="50dp"
                android:paddingStart="30dp"
                android:layout_marginLeft="80dp"
                android:layout_marginRight="80dp"
                android:background="@drawable/inputborder"
                android:hint="@string/your_full_name"
                android:inputType="textPersonName"
                android:importantForAutofill="no"
                tools:ignore="RtlSymmetry"/>

        <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_marginTop="30dp"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="50dp"
                android:textStyle="bold"
                android:textSize="16sp"
                android:paddingBottom="15dp"
                android:layout_height="wrap_content"
                android:text="@string/birthday"/>

        <EditText
                android:id="@+id/editTextBirthday"
                android:layout_width="match_parent"
                android:ems="10"
                android:layout_height="40dp"
                android:paddingStart="30dp"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="50dp"
                android:layout_marginLeft="80dp"
                android:layout_marginRight="80dp"
                android:background="@drawable/inputborder"
                android:hint="@string/dd_mm_yy"
                android:inputType="date"
                android:importantForAutofill="no"
                tools:ignore="RtlSymmetry"/>

        <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_marginTop="30dp"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="50dp"
                android:textStyle="bold"
                android:textSize="16sp"
                android:paddingBottom="15dp"
                android:layout_height="wrap_content"
                android:text="@string/email"/>

        <EditText
                android:id="@+id/editTextEmail"
                android:layout_width="match_parent"
                android:ems="10"
                android:layout_height="40dp"
                android:paddingStart="30dp"
                android:layout_marginLeft="80dp"
                android:layout_marginRight="80dp"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="50dp"
                android:background="@drawable/inputborder"
                android:hint="@string/your_email"
                android:inputType="textEmailAddress"
                android:autofillHints="no"
                tools:ignore="RtlSymmetry"/>

        <TextView
                android:id="@+id/textViewPhoneNumber"
                android:layout_width="match_parent"
                android:layout_marginTop="30dp"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="50dp"
                android:textStyle="bold"
                android:textSize="16sp"
                android:paddingBottom="15dp"
                android:layout_height="wrap_content"
                android:text="@string/phone_number"/>

        <EditText
                android:id="@+id/editTextPhoneNumber"
                android:layout_width="match_parent"
                android:ems="10"
                android:layout_height="40dp"
                android:paddingStart="30dp"
                android:layout_marginLeft="80dp"
                android:layout_marginRight="80dp"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="50dp"
                android:background="@drawable/inputborder"
                android:hint="@string/your_phone_number"
                android:inputType="phone"
                android:autofillHints="no"
                tools:ignore="RtlSymmetry"/>

        <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_marginTop="30dp"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="50dp"
                android:textStyle="bold"
                android:textSize="16sp"
                android:paddingBottom="15dp"
                android:layout_height="wrap_content"
                android:text="@string/location_address"/>

        <EditText
                android:id="@+id/editTextAddress"
                android:layout_width="match_parent"
                android:ems="10"
                android:layout_height="40dp"
                android:paddingStart="30dp"
                android:layout_marginLeft="80dp"
                android:layout_marginRight="80dp"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="50dp"
                android:background="@drawable/inputborder"
                android:hint="@string/your_location"
                android:inputType="text"
                android:importantForAutofill="no"
                tools:ignore="RtlSymmetry"/>

        <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_marginTop="30dp"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="50dp"
                android:textStyle="bold"
                android:textSize="16sp"
                android:paddingBottom="15dp"
                android:layout_height="wrap_content"
                android:text="@string/password"/>

        <EditText
                android:id="@+id/editTextPassword"
                android:layout_width="match_parent"
                android:ems="10"
                android:layout_height="40dp"
                android:paddingStart="30dp"
                android:layout_marginLeft="80dp"
                android:layout_marginRight="80dp"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="50dp"
                android:background="@drawable/inputborder"
                android:hint="@string/your_password"
                android:inputType="text"
                tools:ignore="RtlSymmetry,TextFields" android:importantForAutofill="no"/>

        <ImageButton
                android:id="@+id/imageButton3"
                android:layout_width="355dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:background="?android:selectableItemBackground"
                android:onClick="register"
                android:scaleType="fitCenter"
                app:srcCompat="@mipmap/nextbtn"
                android:contentDescription="@string/todo"/>

    </LinearLayout>
</ScrollView>