<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:orientation="vertical">

        <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="131dp"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="30dp"
                android:onClick="selectImage"
                app:srcCompat="@mipmap/contnet"
                tools:ignore="ContentDescription"/>

        <TextView
                android:id="@+id/textViewAproved"
                android:layout_width="match_parent"
                android:layout_marginLeft="70dp"
                android:layout_marginRight="70dp"
                android:textStyle="bold"
                android:textSize="25sp"
                android:textAlignment="center"
                android:paddingBottom="15dp"
                android:layout_height="wrap_content"
                android:text="@string/your_request_has_been_approved"/>

        <TextView
                android:id="@+id/textlorem"
                android:layout_width="match_parent"
                android:layout_marginLeft="70dp"
                android:layout_marginRight="70dp"
                android:textStyle="bold"
                android:textSize="15sp"
                android:textAlignment="center"
                android:textColor="#6D8593"
                android:paddingBottom="15dp"
                android:layout_height="wrap_content"
                android:text="@string/lorem_ipsum_dolor_sit_amet_consectetur_adipisicing_elit_eligendi_non_quis_exercitationem_culpa_nesciunt_nihil"/>

        <TextView
                android:id="@+id/requestDetails"
                android:layout_width="match_parent"
                android:layout_marginStart="20dp"
                android:textSize="18sp"
                android:textAlignment="textStart"
                android:paddingBottom="15dp"
                android:layout_marginTop="30dp"
                android:textColor="#08DA5F"
                android:layout_height="wrap_content"
                android:text="@string/request_details"/>

        <TextView
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_marginStart="20dp"
                android:textSize="17sp"
                android:textAlignment="textStart"
                android:paddingBottom="15dp"
                android:layout_marginTop="1dp"
                android:textColor="#6D8593"
                android:layout_height="wrap_content"
                android:text="@string/jojon_suehndra"/>
        <TextView
                android:id="@+id/textname"
                android:layout_width="match_parent"
                android:layout_marginStart="20dp"
                android:textStyle="bold"
                android:textSize="17sp"
                android:textAlignment="textStart"
                android:paddingBottom="1dp"
                android:layout_marginTop="5dp"
                android:textColor="#000"
                android:layout_height="wrap_content"
                android:text="@string/name"/>

        <TextView
                android:id="@+id/textdesease"
                android:layout_width="match_parent"
                android:layout_marginStart="20dp"
                android:textStyle="bold"
                android:textSize="17sp"
                android:textAlignment="textStart"
                android:paddingBottom="1dp"
                android:layout_marginTop="5dp"
                android:textColor="#000"
                android:layout_height="wrap_content"
                android:text="@string/desease"/>

        <TextView
                android:id="@+id/desease"
                android:layout_width="match_parent"
                android:layout_marginStart="20dp"
                android:textSize="17sp"
                android:textAlignment="textStart"
                android:paddingBottom="15dp"
                android:layout_marginTop="1dp"
                android:textColor="#6D8593"
                android:layout_height="wrap_content"
                android:text="@string/sore_eyes"/>
        <TextView
                android:id="@+id/textlocation"
                android:layout_width="match_parent"
                android:layout_marginStart="20dp"
                android:textStyle="bold"
                android:textSize="17sp"
                android:textAlignment="textStart"
                android:paddingBottom="1dp"
                android:layout_marginTop="5dp"
                android:textColor="#000"
                android:layout_height="wrap_content"
                android:text="@string/location"/>

        <TextView
                android:id="@+id/location"
                android:layout_width="match_parent"
                android:layout_marginStart="20dp"
                android:textSize="17sp"
                android:textAlignment="textStart"
                android:paddingBottom="15dp"
                android:layout_marginTop="1dp"
                android:textColor="#6D8593"
                android:layout_height="wrap_content"
                android:text="@string/st_broxlyn_212"/>

        <TextView
                android:id="@+id/textdescription"
                android:layout_width="match_parent"
                android:layout_marginStart="20dp"
                android:textStyle="bold"
                android:textSize="17sp"
                android:textAlignment="textStart"
                android:paddingBottom="1dp"
                android:layout_marginTop="5dp"
                android:textColor="#000"
                android:layout_height="wrap_content"
                android:text="@string/description"/>

        <TextView
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_marginStart="20dp"
                android:textSize="17sp"
                android:textAlignment="textStart"
                android:paddingBottom="15dp"
                android:layout_marginTop="1dp"
                android:textColor="#6D8593"
                android:layout_height="wrap_content"
                android:text="@string/aku_ingin_menjadi_setitik_awan_kecil_di_langint_bersama_mentari_yaga_hah"/>

        <TextView
                android:id="@+id/requestDoctor"
                android:layout_width="match_parent"
                android:layout_marginStart="20dp"
                android:textStyle="bold"
                android:textSize="18sp"
                android:textAlignment="textStart"
                android:layout_marginTop="20dp"
                android:textColor="#08DA5F"
                android:layout_height="wrap_content"
                android:text="@string/doctor"/>

        <ImageView
                android:id="@+id/doctor"
                android:layout_width="match_parent"
                android:layout_height="131dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:onClick="selectImage"
                app:srcCompat="@mipmap/doctor"
                tools:ignore="ContentDescription"/>

        <Button
                android:layout_width="match_parent"
                android:id="@+id/confirmBtn"
                android:layout_height="140dp"
                android:background="@mipmap/confirmbtn"/>

        <Button
                android:id="@+id/cancelbtn"
                android:layout_width="match_parent"
                android:layout_height="95dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:background="@mipmap/cancelbtn"/>

        <android.support.design.widget.BottomNavigationView
                android:id="@+id/bottom_navigation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:labelVisibilityMode="labeled"
                app:background="@android:color/white"
                app:itemBackground="@mipmap/homemenuboxshadow"
                app:itemIconTint="@drawable/bottom_navigation_item_colors"
                app:itemTextColor="@drawable/bottom_navigation_item_colors"
                app:menu="@menu/bottom_nav_menu"
                android:layout_gravity="end"
                tools:layout_editor_absoluteY="590dp"
                app:layout_constraintTop_toBottomOf="@+id/homerequest"/>
    </LinearLayout>
</ScrollView>