<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <ImageView
                android:id="@+id/profileImage"
                android:layout_width="match_parent"
                android:layout_height="131dp"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="30dp"
                app:srcCompat="@mipmap/addphotos"
                tools:ignore="ContentDescription"/>

        <TextView
                android:id="@+id/profileNameTitle"
                android:layout_width="match_parent"
                android:layout_marginStart="100dp"
                android:textStyle="bold"
                android:textSize="16sp"
                android:paddingBottom="15dp"
                android:layout_height="wrap_content"
                android:text="@string/profile_full_name"/>

        <TextView
                android:id="@+id/profileName"
                android:layout_width="match_parent"
                android:layout_marginLeft="100dp"
                android:paddingStart="15dp"
                android:layout_marginRight="100dp"
                android:textStyle="bold"
                android:textSize="16sp"
                android:paddingTop="15dp"
                android:background="@drawable/inputborder"
                android:paddingBottom="15dp"
                android:layout_height="wrap_content"
                android:text="@string/name"
                tools:ignore="RtlSymmetry"/>

        <TextView
                android:id="@+id/profileBirthdayTitle"
                android:layout_width="match_parent"
                android:layout_marginTop="30dp"
                android:layout_marginStart="100dp"
                android:textStyle="bold"
                android:textSize="16sp"
                android:paddingBottom="15dp"
                android:layout_height="wrap_content"
                android:text="@string/birthday"/>

        <TextView
                android:id="@+id/profileBirthday"
                android:layout_width="match_parent"
                android:paddingStart="15dp"
                android:layout_marginLeft="100dp"
                android:layout_marginRight="100dp"
                android:textStyle="bold"
                android:paddingTop="15dp"
                android:background="@drawable/inputborder"
                android:textSize="16sp"
                android:paddingBottom="15dp"
                android:layout_height="wrap_content"
                android:text="@string/birthday"
                tools:ignore="RtlSymmetry"/>

        <TextView
                android:id="@+id/profileEmailTitle"
                android:layout_width="match_parent"
                android:layout_marginTop="30dp"
                android:layout_marginStart="100dp"
                android:textStyle="bold"
                android:textSize="16sp"
                android:paddingBottom="15dp"
                android:layout_height="wrap_content"
                android:text="@string/email"/>

        <TextView
                android:id="@+id/profileEmail"
                android:layout_width="match_parent"
                android:layout_marginLeft="100dp"
                android:paddingStart="15dp"
                android:layout_marginRight="100dp"
                android:background="@drawable/inputborder"
                android:textStyle="bold"
                android:paddingTop="15dp"
                android:textSize="16sp"
                android:paddingBottom="15dp"
                android:layout_height="wrap_content"
                android:text="@string/email"
                tools:ignore="RtlSymmetry"/>

        <TextView
                android:id="@+id/profilePhoneTitle"
                android:layout_width="match_parent"
                android:layout_marginTop="30dp"
                android:layout_marginStart="100dp"
                android:textStyle="bold"
                android:textSize="16sp"
                android:paddingBottom="15dp"
                android:layout_height="wrap_content"
                android:text="@string/phone_number"/>

        <TextView
                android:id="@+id/profilePhone"
                android:layout_width="match_parent"
                android:paddingStart="15dp"
                android:layout_marginRight="100dp"
                android:layout_marginLeft="100dp"
                android:background="@drawable/inputborder"
                android:textStyle="bold"
                android:textSize="16sp"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:layout_height="wrap_content"
                android:text="@string/phone"
                tools:ignore="RtlSymmetry"/>

        <TextView
                android:id="@+id/profileLocationTitle"
                android:layout_width="match_parent"
                android:layout_marginTop="30dp"
                android:layout_marginStart="100dp"
                android:textStyle="bold"
                android:textSize="16sp"
                android:paddingBottom="15dp"
                android:layout_height="wrap_content"
                android:text="@string/address"/>

        <TextView
                android:id="@+id/profileLocation"
                android:paddingStart="15dp"
                android:layout_marginRight="100dp"
                android:background="@drawable/inputborder"
                android:layout_width="match_parent"
                android:layout_marginLeft="100dp"
                android:textStyle="bold"
                android:textSize="16sp"
                android:paddingBottom="15dp"
                android:paddingTop="15dp"
                android:layout_height="wrap_content"
                android:text="@string/location"
                tools:ignore="RtlSymmetry"/>

        <android.support.design.widget.BottomNavigationView
                android:id="@+id/bottom_navigation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:layout_gravity="end"
                app:background="@android:color/white"
                app:itemBackground="@mipmap/homemenuboxshadow"
                app:itemIconTint="@drawable/bottom_navigation_item_colors"
                app:itemTextColor="@drawable/bottom_navigation_item_colors"
                app:labelVisibilityMode="labeled"
                app:layout_constraintTop_toBottomOf="@+id/homerequest"
                app:menu="@menu/bottom_nav_menu"/>

    </LinearLayout>
</ScrollView>