<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@mipmap/login"
        android:orientation="horizontal"
        tools:context=".activities.LoginActivity">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:ignore="UselessParent">
        <EditText
                android:id="@+id/username"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_marginStart="60dp"
                android:layout_marginEnd="60dp"
                android:layout_marginTop="260dp"
                android:background="@mipmap/logininput"
                android:padding="10dp"
                android:paddingStart="50dp"
                android:hint="@string/email_address"
                android:textColorHint="@android:color/white"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                app:layout_constraintBottom_toTopOf="@+id/password"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="MissingConstraints,RtlSymmetry,TextFields"
                android:importantForAutofill="no" tools:layout_editor_absoluteX="436dp"/>
        <EditText
                android:id="@+id/password"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_marginStart="60dp"
                android:layout_marginEnd="60dp"
                android:layout_marginTop="25dp"
                android:background="@mipmap/passwordinput"
                android:padding="10dp"
                android:paddingStart="50dp"
                android:hint="@string/password"
                android:textColorHint="@android:color/white"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                app:layout_constraintTop_toBottomOf="@+id/username"
                tools:ignore="MissingConstraints,RtlSymmetry,TextFields"
                tools:layout_editor_absoluteX="436dp"
                android:importantForAutofill="no"/>
        <Button
                android:id="@+id/btn_login"
                android:layout_width="270dp"
                android:layout_height="50dp"
                android:layout_marginStart="60dp"
                android:layout_marginEnd="60dp"
                android:layout_marginTop="40dp"
                android:gravity="center"
                android:scaleType="fitCenter"
                android:background="@drawable/button"
                android:text="@string/sign_in"
                android:textColor="@color/colorPrimary"
                tools:ignore="MissingConstraints" tools:layout_editor_absoluteY="445dp"
                tools:layout_editor_absoluteX="447dp"/>
        <TextView
                android:id="@+id/signUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="160dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="160dp"
                android:layout_marginBottom="50dp"
                android:text="@string/signup"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.548"
                app:layout_constraintStart_toStartOf="parent"
                android:onClick="signUp"
                app:layout_constraintTop_toBottomOf="@+id/btn_login" app:layout_constraintVertical_bias="0.474"/>

    </LinearLayout>
</LinearLayout>